--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ RAG</b> in finance and the other about <b>LLM-based Personalized Image Generatio
 </p><p style="margin-left:0px;">
 COM4, 3A Research Link, Singapore 119392<br>
 </p><p style="margin-left:0px;">
-Email: zhfengbin AT gmail.com</a><br>
+Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 &bull; <a href="https://scholar.google.com/citations?user=-rxzvfcAAAAJ&hl=en">Google Scholar</a> &bull; <a href="https://www.linkedin.com/in/fengbin-zhu/">LinkedIn</a> &bull; <a href="https://github.com/fengbinzhu">GitHub</a>  <br>
 </p></font><p><font size="+0">
 </font>
@@ -206,13 +206,13 @@ Email: zhfengbin AT gmail.com</a><br>
 
 	
 <!-- =======================================================================!-->
-<h2 style="CLEAR: both;">Conferences, Workshops, Tutorials, Competitions and Surveys</h2>
+<h2 style="CLEAR: both;">Surveys, Conferences, Workshops, Tutorials and Competitions</h2>
 
 <table>
   <tbody>
   <tr>
     <td class="left"><a href="https://www.preprints.org/frontend/manuscript/11cab45ab0d578f7080de19423eb6ffe/download_pub" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Opening the Black Box: A Survey on the Mechanisms of Multi-Step Reasoning in Large Language Models</span> 
+    <td><span class="title">[Survey] Opening the Black Box: A Survey on the Mechanisms of Multi-Step Reasoning in Large Language Models</span> 
      <br>Liangming Pan, Jason Liang, Jiaran Ye, Minglai Yang, Xinyuan Lu, <strong>Fengbin Zhu</strong>
 	<br>Preprints 2026
   </td>
@@ -224,8 +224,8 @@ Email: zhfengbin AT gmail.com</a><br>
   <tbody>
   <tr>
     <td class="left"><a href="https://finddr2025.github.io/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Financial Document Deep Research (FinDDR) Grand Challenge</span> 
-    <br> ICAIF 2025 &nbsp;&nbsp; <a href="https://finddr2025.github.io/" target="_blank">Website</a>
+    <td><span class="title">[Competition] Financial Document Deep Research (FinDDR) Competition @ ACM ICAIF 2025</span> 
+    <br> ACM ICAIF 2025 &nbsp;&nbsp; <a href="https://finddr2025.github.io/" target="_blank">Website</a>
   </td>
   </tr>
  </tbody>
@@ -235,7 +235,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tbody>
   <tr>
     <td class="left"><a href="https://icaif25.org/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">The 6th ACM International Conference on AI in Finance (ICAIF) 2025</span> 
+    <td><span class="title">[Conference] The 6th ACM International Conference on AI in Finance (ICAIF) 2025</span> 
     <br> Singapore &nbsp;&nbsp;  <a href="https://icaif25.org/" target="_blank">Website</a>
   </td>
   </tr>
@@ -246,7 +246,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tbody>
   <tr>
     <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">The 2nd Workshop on Financial Information Retrieval (FinIR) in the Era of Generative AI</span> 
+    <td><span class="title">[Workshop] The 2nd Workshop on Financial Information Retrieval (FinIR) in the Era of Generative AI</span> 
       <br><b>Fengbin Zhu</b>, Yunshan Ma, Fuli Feng, Chao Wang, Huanbo Luan, Guangnan Ye, Shuo Zhang, Dhagash Mehta, Pingping Chen, Bing Xiang, Tat-Seng Chua
     <br>SIGIR 2025 &nbsp;&nbsp; <a href="https://finir2025.github.io/" target="_blank">Website</a>
   </td>
@@ -259,7 +259,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tbody>
   <tr>
     <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Long Context vs. RAG: Strategies for Processing Long Documents in LLMs</span> 
+    <td><span class="title">[Tutorial] Long Context vs. RAG: Strategies for Processing Long Documents in LLMs</span> 
       <br>Xinze Li, Yushi Bai, Bowen Jin, <b>Fengbin Zhu</b>, Liangming Pan and Yixin Cao
     <br>SIGIR 2025 (Tutorial) &nbsp;&nbsp; <a href="https://sites.google.com/view/sigir25-lc-vs-rag/" target="_blank">Website</a> 
   </td>
@@ -271,7 +271,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tbody>
   <tr>
     <td class="left"><a href="https://arxiv.org/abs/2408.04223" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">VideoQA in the Era of LLMs: An Empirical Study</span> 
+    <td><span class="title">[Survey] VideoQA in the Era of LLMs: An Empirical Study</span> 
       <br>Junbin Xiao, Nanxin Huang, Hangyu Qin, Dongyang Li, Yicong Li, <strong>Fengbin Zhu</strong>, Zhulin Tao, Jianxing Yu, Liang Lin, Tat-Seng Chua, Angela Yao
     <br>IJCV 2025
   </td> 
@@ -283,7 +283,7 @@ Email: zhfengbin AT gmail.com</a><br>
   <tbody>
   <tr>
     <td class="left"><a href="https://arxiv.org/abs/2101.00774" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Retrieving and Reading: A Comprehensive Survey on Open-domain Question Answering</span> 
+    <td><span class="title">[Survey] Retrieving and Reading: A Comprehensive Survey on Open-domain Question Answering</span> 
       <br><strong>Fengbin Zhu</strong>, Wenqiang Lei, Chao Wang, Jianming Zheng, Soujanya Poria, Tat-Seng Chua
     <br>Arxiv 2021
   </td> 
