--- a/index.html
+++ b/index.html
@@ -223,6 +223,17 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 <table>
   <tbody>
   <tr>
+    <td class="left"><a href="https://icaif25.org/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">[Conference] The 6th ACM International Conference on AI in Finance (ICAIF) 2025</span> 
+    <br> Singapore &nbsp;&nbsp;  <a href="https://icaif25.org/" target="_blank">Website</a>
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
     <td class="left"><a href="https://finddr2025.github.io/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">[Competition] Financial Document Deep Research (FinDDR) Competition @ ACM ICAIF 2025</span> 
     <br> ACM ICAIF 2025 &nbsp;&nbsp; <a href="https://finddr2025.github.io/" target="_blank">Website</a>
@@ -234,18 +245,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="https://icaif25.org/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">[Conference] The 6th ACM International Conference on AI in Finance (ICAIF) 2025</span> 
-    <br> Singapore &nbsp;&nbsp;  <a href="https://icaif25.org/" target="_blank">Website</a>
-  </td>
-  </tr>
- </tbody>
-</table>
-	
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="https://finir2025.github.io/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">[Workshop] The 2nd Workshop on Financial Information Retrieval (FinIR) in the Era of Generative AI</span> 
       <br><b>Fengbin Zhu</b>, Yunshan Ma, Fuli Feng, Chao Wang, Huanbo Luan, Guangnan Ye, Shuo Zhang, Dhagash Mehta, Pingping Chen, Bing Xiang, Tat-Seng Chua
     <br>SIGIR 2025 &nbsp;&nbsp; <a href="https://finir2025.github.io/" target="_blank">Website</a>
@@ -258,7 +258,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="https://sites.google.com/view/sigir25-lc-vs-rag/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">[Tutorial] Long Context vs. RAG: Strategies for Processing Long Documents in LLMs</span> 
       <br>Xinze Li, Yushi Bai, Bowen Jin, <b>Fengbin Zhu</b>, Liangming Pan and Yixin Cao
     <br>SIGIR 2025 (Tutorial) &nbsp;&nbsp; <a href="https://sites.google.com/view/sigir25-lc-vs-rag/" target="_blank">Website</a> 
@@ -298,6 +298,19 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 <div id="papers">
 <h2 style="CLEAR: both">Publications <a href="https://scholar.google.com/citations?user=-rxzvfcAAAAJ&hl=en" target="_blank">Google Scholar</a> </h2> &nbsp;&nbsp;  #Equal Contribution  &nbsp;&nbsp;  *Corresponding Author 
 </br>
+
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://www.arxiv.org/pdf/2601.05039" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">FinDeepForecast: A Live Multi-Agent System for Benchmarking Deep Research Agents in Financial Forecasting </span> 
+     <br>#Xiangyu Li, #Xuan Yao, #Guohao Qi, <strong>#*Fengbin Zhu</strong>, Kelvin J.L. Koa, Xiang Yao Ng, Ziyang Liu, Xingyu Ni, Chang Liu, Yonghui Yang, Yang Zhang, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, Xiaofen Xing, Xiangmin Xu, Tat-Seng Chua, Ke-Wei Huang
+	   <br>Arxiv 2026
+  </td>
+  </tr>
+ </tbody>
+</table>
 
 <table>
   <tbody>
@@ -512,8 +525,8 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
   <tr>
     <td class="left"><a href="https://dl.acm.org/doi/abs/10.1145/3543873.3587598" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">SoarGraph: Numerical Reasoning over Financial Table-Text Data via Semantic-Oriented Hierarchical Graphs</span> 
-      <br><strong>Fengbin Zhu</strong>, Moxin Li, Junbin Xiao, Fuli Feng, Chao Wang, Tat Seng Chua
-    <br>WWW 2023 (Workshop)
+      <br><strong>Fengbin Zhu</strong>, Moxin Li, Junbin Xiao, Fuli Feng, Chao Wang, Tat-Seng Chua
+    <br>WWW 2023 (Companion)
   </td> 
   </tr>
  </tbody>
@@ -525,7 +538,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
     <td class="left"><a href="https://dl.acm.org/doi/abs/10.1145/3503161.3548422/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Towards Complex Document Understanding By Discrete Reasoning</span> 
       <br><strong>Fengbin Zhu</strong>, Wenqiang Lei, Fuli Feng, Chao Wang, Haozhou Zhang, Tat-Seng Chua
-    <br>ACM MM 2022 (Poster)
+    <br>ACM MM 2022
   </td> 
   </tr>
  </tbody>
@@ -537,7 +550,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
     <td class="left"><a href="https://aclanthology.org/2022.acl-long.5/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Learning to Imagine: Integrating Counterfactual Thinking in Neural Discrete Reasoning</span> 
       <br>Moxin Li, Fuli Feng, Hanwang Zhang, Xiangnan He, <strong>Fengbin Zhu</strong>, Tat-Seng Chua
-    <br>ACL 2022 (Poster)
+    <br>ACL 2022 (Main)
   </td> 
   </tr>
  </tbody>
@@ -629,7 +642,9 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 
 </br>
 
-<a href='https://clustrmaps.com/site/1c1sz'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=200&t=m&d=gD2pgA_cxi0YfQEqH8dCL4qwueAnp0B1NOY6Z5eV46g'/></a>
+<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=gD2pgA_cxi0YfQEqH8dCL4qwueAnp0B1NOY6Z5eV46g&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script>
+
+<!-- <a href='https://clustrmaps.com/site/1c1sz'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=200&t=m&d=gD2pgA_cxi0YfQEqH8dCL4qwueAnp0B1NOY6Z5eV46g'/></a> -->
 
 </br>
 
