--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     <font size="3px">
 		
 	<b>Jan 2026</b><br> 
+  <span class="easylink">
+  【WWW'26】One paper has been accepted by WWW'26 about <strong>LLM Unlearning</strong>!
+   </span><br><br>	
+
+	<b>Jan 2026</b><br> 
     <span class="easylink">
     【Survey】We have released a comprehensive <a href="https://www.preprints.org/frontend/manuscript/11cab45ab0d578f7080de19423eb6ffe/download_pub" target="_blank"> survey paper</a> to investigate the <b>  Mechanisms of Multi-Step Reasoning (e.g., chain of thought) in LLMs</b> through two distinct paradigms: Implicit Reasoning and Explicit Reasoning.
 	</span><br><br>	
@@ -303,6 +308,18 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 <table>
   <tbody>
   <tr>
+    <td class="left"><a href="https://arxiv.org/pdf/2601.09172" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">BalDRO: A Distributionally Robust Optimization based Framework for Large Language Model Unlearning </span> 
+     <br>Pengyang Shao, Naixin Zhai, Lei Chen, Yonghui Yang, <strong>*Fengbin Zhu</strong>, *Xun Yang, Meng Wang
+	   <br>WWW 2026
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
     <td class="left"><a href="https://www.arxiv.org/pdf/2601.05039" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">FinDeepForecast: A Live Multi-Agent System for Benchmarking Deep Research Agents in Financial Forecasting </span> 
      <br>#Xiangyu Li, #Xuan Yao, #Guohao Qi, <strong>#*Fengbin Zhu</strong>, Kelvin J.L. Koa, Xiang Yao Ng, Ziyang Liu, Xingyu Ni, Chang Liu, Yonghui Yang, Yang Zhang, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, Xiaofen Xing, Xiangmin Xu, Tat-Seng Chua, Ke-Wei Huang
@@ -330,7 +347,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
     <td class="left"><a href="https://arxiv.org/pdf/2509.15709" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">Understanding Embedding Scaling in Collaborative Filtering</span> 
       <br> Yicheng He, Zhou Kaiyu, Haoyue Bai,  <strong>Fengbin Zhu</strong>, Yonghui Yang
-    <br>TMLR (2025)
+    <br>TMLR 2025
   </td> 
   </tr>
  </tbody>
