--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 
 <table>
   <tbody><tr>
-    <td> <span class="title">Technology Director</span>, <a href="https://www.6estates.com/about" target="_blank"> 6Estates Pte Ltd</a>, Mar 2015 -  
+    <td> <span class="title">Technology Director</span>, <a href="https://www.6estates.com/about" target="_blank"> 6Estates Pte Ltd</a>, Mar 2015 - Jul 2024 
     </td></tr></tbody>
 </table>
 
