--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
 <div id="news">
     <h2>News</h2><br>
     <font size="3px">
+			
+	<b>Jan 2026</b><br> 
+    <span class="easylink">
+  【ICLR'26】One paper has been accepted by ICLR'26 that is a <strong>Comprehensive Human Protein Benchmark</strong>!
+   </span><br><br>	
 		
 	<b>Jan 2026</b><br> 
-  <span class="easylink">
+    <span class="easylink">
   【WWW'26】One paper has been accepted by WWW'26 about <strong>LLM Unlearning</strong>!
    </span><br><br>	
 
@@ -216,10 +221,10 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="https://www.preprints.org/frontend/manuscript/11cab45ab0d578f7080de19423eb6ffe/download_pub" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td class="left"><a href="https://arxiv.org/pdf/2601.14270" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">[Survey] Opening the Black Box: A Survey on the Mechanisms of Multi-Step Reasoning in Large Language Models</span> 
      <br>Liangming Pan, Jason Liang, Jiaran Ye, Minglai Yang, Xinyuan Lu, <strong>Fengbin Zhu</strong>
-	<br>Preprints 2026
+	<br>Arxiv 2026
   </td>
   </tr>
  </tbody>
@@ -304,6 +309,17 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 <h2 style="CLEAR: both">Publications <a href="https://scholar.google.com/citations?user=-rxzvfcAAAAJ&hl=en" target="_blank">Google Scholar</a> </h2> &nbsp;&nbsp;  #Equal Contribution  &nbsp;&nbsp;  *Corresponding Author 
 </br>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">CAPSUL: A Comprehensive Human Protein Benchmark for Subcellular Localization</span> 
+     <br>Yicheng Hu, Xinyu Lin, Shulin Li, Wenjie Wang, <strong>Fengbin Zhu</strong>, Fuli Feng
+	  <br>ICLR 2026
+  </td>
+  </tr>
+ </tbody>
+</table>
 
 <table>
   <tbody>
@@ -317,6 +333,18 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
  </tbody>
 </table>
 
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/pdf/2601.14270" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">[Survey] Opening the Black Box: A Survey on the Mechanisms of Multi-Step Reasoning in Large Language Models</span> 
+     <br>*Liangming Pan, Jason Liang, Jiaran Ye, Minglai Yang, Xinyuan Lu, <strong>*Fengbin Zhu</strong>
+	<br>Arxiv 2026
+  </td>
+  </tr>
+ </tbody>
+</table>
+	
 <table>
   <tbody>
   <tr>
