--- a/index.html
+++ b/index.html
@@ -214,7 +214,6 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
   </ul>
 </div>
 
-	
 <!-- =======================================================================!-->
 <h2 style="CLEAR: both;">Surveys, Conferences, Workshops, Tutorials and Competitions</h2>
 
@@ -303,11 +302,65 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 	
 
 <!-- =======================================================================!-->
+<h2 style="CLEAR: both">Prepirnts </h2> 
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://www.arxiv.org/pdf/2601.05039" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">FinDeepForecast: A Live Multi-Agent System for Benchmarking Deep Research Agents in Financial Forecasting </span> 
+     <br>#Xiangyu Li, #Xuan Yao, #Guohao Qi, <strong>#*Fengbin Zhu</strong>, Kelvin J.L. Koa, Xiang Yao Ng, Ziyang Liu, Xingyu Ni, Chang Liu, Yonghui Yang, Yang Zhang, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, Xiaofen Xing, Xiangmin Xu, Tat-Seng Chua, Ke-Wei Huang
+	   <br>Arxiv 2026
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/pdf/2510.13936" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">FinDeepResearch: Evaluating Deep Research Agents in Rigorous Financial Analysis</span> 
+     <br><strong>*Fengbin Zhu</strong>, Xiang Yao Ng, Ziyang Liu, Chang Liu, Xianwei Zeng, Chao Wang, Tianhui Tan, Xuan Yao, Pengyang Shao, Min Xu, Zixuan Wang, Jing Wang, Xin Lin, Junfeng Li, Jingxian Zhu, Yang Zhang, Wenjie Wang, Fuli Feng, Richang Hong, Huanbo Luan, Ke-Wei Huang, Tat-Seng Chua
+	   <br>Arxiv 2025
+  </td>
+  </tr>
+ </tbody>
+</table>
+
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2502.06148" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Optimizing Knowledge Integration in Retrieval-Augmented Generation with Self-Selection</span> 
+      <br>Yan Weng, *<strong>Fengbin Zhu</strong>, Tong Ye, Haoyan Liu, *Fuli Feng, Tat-Seng Chua
+    <br>Arxiv 2025
+  </td> 
+  </tr>
+ </tbody>
+</table>
+
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://arxiv.org/abs/2502.02061" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">Reason4Rec: Large Language Models for Recommendation with Deliberative User Preference Alignment</span> 
+      <br>Yi Fang, Wenjie Wang, Yang Zhang, <strong>Fengbin Zhu</strong>, Qifan Wang, Fuli Feng, Xiangnan He
+    <br>Arxiv 2025
+  </td> 
+  </tr>
+ </tbody>
+</table>
 
 
 <div id="papers">
-<h2 style="CLEAR: both">Publications <a href="https://scholar.google.com/citations?user=-rxzvfcAAAAJ&hl=en" target="_blank">Google Scholar</a> </h2> &nbsp;&nbsp;  #Equal Contribution  &nbsp;&nbsp;  *Corresponding Author 
+<h2 style="CLEAR: both">Publications <a href="https://scholar.google.com/citations?user=-rxzvfcAAAAJ&hl=en" target="_blank">Google Scholar</a> </h2> &nbsp; #Equal Contribution  &nbsp;  *Corresponding Author </h2>
 </br>
+
+
+<b> In the Year of 2026: </b> </br></br>
 
 <table>
   <tbody>
@@ -336,38 +389,16 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 <table>
   <tbody>
   <tr>
-    <td class="left"><a href="https://arxiv.org/pdf/2601.14270" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">[Survey] Opening the Black Box: A Survey on the Mechanisms of Multi-Step Reasoning in Large Language Models</span> 
-     <br>*Liangming Pan, Jason Liang, Jiaran Ye, Minglai Yang, Xinyuan Lu, <strong>*Fengbin Zhu</strong>
-	<br>Arxiv 2026
-  </td>
-  </tr>
- </tbody>
-</table>
-	
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://www.arxiv.org/pdf/2601.05039" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">FinDeepForecast: A Live Multi-Agent System for Benchmarking Deep Research Agents in Financial Forecasting </span> 
-     <br>#Xiangyu Li, #Xuan Yao, #Guohao Qi, <strong>#*Fengbin Zhu</strong>, Kelvin J.L. Koa, Xiang Yao Ng, Ziyang Liu, Xingyu Ni, Chang Liu, Yonghui Yang, Yang Zhang, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, Xiaofen Xing, Xiangmin Xu, Tat-Seng Chua, Ke-Wei Huang
-	   <br>Arxiv 2026
-  </td>
+    <td class="left"><a href="https://arxiv.org/abs/2410.21311" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">MMDocBench: Benchmarking Large Vision-Language Models for Fine-Grained Visual Document Understanding and Grounding</span> 
+      <br><strong>Fengbin Zhu</strong>, Ziyang Liu, Xiang Yao NG, Haohui Wu, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, and Tat-Seng Chua
+    <br>MMM 2026 (<font color='red'>Oral</font>)
+  </td> 
   </tr>
  </tbody>
 </table>
 
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/pdf/2510.13936" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">FinDeepResearch: Evaluating Deep Research Agents in Rigorous Financial Analysis</span> 
-     <br><strong>*Fengbin Zhu</strong>, Xiang Yao Ng, Ziyang Liu, Chang Liu, Xianwei Zeng, Chao Wang, Tianhui Tan, Xuan Yao, Pengyang Shao, Min Xu, Zixuan Wang, Jing Wang, Xin Lin, Junfeng Li, Jingxian Zhu, Yang Zhang, Wenjie Wang, Fuli Feng, Richang Hong, Huanbo Luan, Ke-Wei Huang, Tat-Seng Chua
-	   <br>Arxiv 2025
-  </td>
-  </tr>
- </tbody>
-</table>
+<b> In the Year of 2025: </b> </br></br>
 
 <table>
   <tbody>
@@ -392,7 +423,6 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
   </tr>
  </tbody>
 </table>
-
 	
 <table>
   <tbody>
@@ -490,43 +520,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
  </tbody>
 </table>
 
-	
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2502.06148" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Optimizing Knowledge Integration in Retrieval-Augmented Generation with Self-Selection</span> 
-      <br>Yan Weng, *<strong>Fengbin Zhu</strong>, Tong Ye, Haoyan Liu, *Fuli Feng, Tat-Seng Chua
-    <br>Arxiv 2025
-  </td> 
-  </tr>
- </tbody>
-</table>
-
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2502.02061" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">Reason4Rec: Large Language Models for Recommendation with Deliberative User Preference Alignment</span> 
-      <br>Yi Fang, Wenjie Wang, Yang Zhang, <strong>Fengbin Zhu</strong>, Qifan Wang, Fuli Feng, Xiangnan He
-    <br>Arxiv 2025
-  </td> 
-  </tr>
- </tbody>
-</table>
-	
-<table>
-  <tbody>
-  <tr>
-    <td class="left"><a href="https://arxiv.org/abs/2410.21311" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
-    <td><span class="title">MMDocBench: Benchmarking Large Vision-Language Models for Fine-Grained Visual Document Understanding and Grounding</span> 
-      <br><strong>Fengbin Zhu</strong>, Ziyang Liu, Xiang Yao NG, Haohui Wu, Wenjie Wang, Fuli Feng, Chao Wang, Huanbo Luan, and Tat-Seng Chua
-    <br>MMM 2026 (<font color='red'>Oral</font>)
-  </td> 
-  </tr>
- </tbody>
-</table>
-	
+<b> In the Year of 2024: </b> </br></br>
 
 <table>
   <tbody>
@@ -565,6 +559,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
  </tbody>
 </table>
 
+<b> Before 2024: </b> </br></br>
 <table>
   <tbody>
   <tr>
@@ -694,7 +689,8 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 </br>
 
 <div>
-Last update: Dec, 2025. Webpage template borrows from <a href="https://fulifeng.github.io/">Prof. Fuli Feng</a> and <a href="https://hexiangnan.github.io/">Prof. Xiangnan He</a>.</div>
+
+  Webpage template borrows from <a href="https://fulifeng.github.io/">Prof. Fuli Feng</a> and <a href="https://hexiangnan.github.io/">Prof. Xiangnan He</a>.</div>
 
 </div>
 </div>
