--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
   <tr>
     <td class="left"><a href="" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
     <td><span class="title">CAPSUL: A Comprehensive Human Protein Benchmark for Subcellular Localization</span> 
-     <br>Yicheng Hu, Xinyu Lin, Shulin Li, Wenjie Wang, <strong>Fengbin Zhu</strong>, Fuli Feng
+     <br>Yicheng Hu, Xinyu Lin, *Shulin Li, Wenjie Wang, <strong>*Fengbin Zhu</strong>, Fuli Feng
 	  <br>ICLR 2026
   </td>
   </tr>
