--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
 
 <div style="margin-top:20px;">
   I am a Postdoc Research Fellow at <a href="https://www.nextcenter.org/" , target="_blank"> NExT Research Center </a> National University of Singapore (NUS), working with  <a href="https://www.chuatatseng.com/" , target="_blank"> Prof. Tat-Seng Chua</a>. My research interests include Multimodal/Heterogeneous Retrieval, Understanding and Reasoning, LLM Evaluation, Agents and AI for Finance. 
-  I am a member of the Executive Committee of ACM International Conference on AI in Finance (ICAIF) and a member of the Executive Committee of China Computer Federation (CCF) China Digital Finance Conference (CDFC)
+  I am a member of the Executive Committee of ACM International Conference on AI in Finance (ICAIF) and a member of the Executive Committee of China Computer Federation (CCF) China Digital Finance Conference (CDFC).
 </div>
 
 	
