--- a/index.html
+++ b/index.html
@@ -617,6 +617,7 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
     Local Co-chair of <span class="title">ACM ICAIF (2025) </span> <br>
 	Area Chair of <span class="title">ACL (2025, 2026) </span> <br>
 	Area Chair of <span class="title">ACM ICMR (2026) </span> <br>
+	Area Chair of <span class="title">KDD (2026) </span> <br>
     PC Member of <span class="title">ACM WWW (2026) </span> <br>
     PC Member of <span class="title">ACM WSDM (2026) </span> <br>
 	PC Member of <span class="title">ACM SIGIR (2025) </span> <br> 
