--- a/index.html
+++ b/index.html
@@ -251,6 +251,18 @@ Email: zhfengbin AT gmail.com or fengbin AT nus.edu.sg </a><br>
   </tr>
  </tbody>
 </table>
+
+<table>
+  <tbody>
+  <tr>
+    <td class="left"><a href="https://ai-4-finance.pages.dev/" target="_blank"><img src="./images/pdf.png" width="25" height="25"><br>pdf</a></td>
+    <td><span class="title">[Workshop] The Workshop on Agentic AI in Financial Services </span> 
+      <br>Tong Chen, Hongxu Chen, Joel Mackenzie, <b>Fengbin Zhu</b>, Luiz Pizzato, Ritchie Ng, Anna Leontjeva
+    <br>AAAI 2026 &nbsp;&nbsp; <a href="https://ai-4-finance.pages.dev/" target="_blank">Website</a>
+  </td>
+  </tr>
+ </tbody>
+</table>
 	
 <table>
   <tbody>
